<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Thankyou" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/placeholder"
        android:text="@string/thankyou1"
        android:textSize="18sp"
         />
    <TextView
        android:id="@+id/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/nothing"
         />
    <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@+id/placeholder"
       android:layout_alignTop="@+id/placeholder"
      android:layout_marginTop="10dp"
      android:clickable="true"
       android:onClick="onClick"
      android:text="@string/liketo" />
    <Button
      android:id="@+id/button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@+id/placeholder"
       android:layout_alignTop="@+id/placeholder"
      android:layout_marginTop="10dp"
      android:clickable="true"
       android:onClick="onClickOne"
      android:text="@string/notliketo" />

</RelativeLayout>
