<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ThursdayDialog" >
      <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/your"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:text="@string/nothing" />
    <Button
      android:id="@+id/button0"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@+id/placeholder"
      android:layout_alignTop="@+id/placeholder"
      android:clickable="true"
       android:onClick="onClick0"
      android:text="@string/ok" />
    <Button
      android:id="@+id/button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@+id/placeholder"
      android:layout_alignTop="@+id/placeholder"
      android:clickable="true"
       android:onClick="onClick1"
      android:text="@string/postpone" />

</RelativeLayout>
